--- a/themes/custom/athena/assets/styles/modules/_smoPage.scss
+++ b/themes/custom/athena/assets/styles/modules/_smoPage.scss
@@ -624,7 +624,8 @@
 }
 .reg-form-control {
   box-shadow: 0 2px 18px -1px #d5dbfb;
-  padding:1.55rem;
+  padding: .375rem .75rem;
+  height: 54px;
 }
 
 .sign-up-button {
